@@ -70,6 +70,7 @@ allprojects {
                     "--add-opens=java.base/java.util=ALL-UNNAMED",
                     "--add-opens=java.base/java.time=ALL-UNNAMED",
                     "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+                    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
                     "--add-opens=java.base/sun.security.x509=ALL-UNNAMED",
                     "-Dio.netty.tryReflectionSetAccessible=true",
                     "-XX:+HeapDumpOnOutOfMemoryError"]
